Change theme for July dialog

--- a/src/main/resources/view/theme.css
+++ b/src/main/resources/view/theme.css
@@ -34,5 +34,5 @@
 .july-dialog-box .label {
     -fx-font-size: 15px;
     -fx-text-fill: #000000;
-    -fx-font-family: "Segoe UI", Arial, sans-serif;
+    -fx-font-family: "Comic Sans MS", "Chalkduster", "Bradley Hand", "Marker Felt", cursive;
 }
